Update source configs

--- a/configs/extracted/G333.46-0.16_alma1.cfg
+++ b/configs/extracted/G333.46-0.16_alma1.cfg
@@ -1,13 +1,9 @@
 [INFO]
 name = G333.46-0.16
-#ra = 16h21m20.18163s
-#dec = -50d09m46.4200s
-# Recentred from Gaussian fit
 ra = 16h21m20.17674s
 dec = -50d09m46.3768s
 frame = icrs
 distance = 2.9 kpc
-# Paper III
 vlsr = -43.55 km/s
 radius = 0.164 arcsec
 sourcedata = ../source_data
@@ -28,7 +24,7 @@ chan_width = 488 kHz
 type = spectral_cube
 file = ${subcubes}/spw3_from_CH3CN.structure99.subcube.fits
 rms = 2.0 mJy/beam
-molecules = CH3CN
+molecules = CH3CN HNCO
 chan_width = 488 kHz
 
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
@@ -64,5 +60,19 @@ type = spectral_cube
 file = ../results/G333.46-0.16/c5c8/per_hot_core/line_cubes/alma1_CH3CN_12_8_-11_8__nchans40.fits
 rms = 2.0 mJy/beam
 molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_HNCO_10_2_9_-9_2_8_]
+type = spectral_cube
+file = ../results/G333.46-0.16/c5c8/per_hot_core/line_cubes/alma1_HNCO_10_2_9_-9_2_8__nchans40.fits
+rms = 2.0 mJy/beam
+molecules = CH3CN HNCO
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_HNCO_10_0_10_-9_0_9_]
+type = spectral_cube
+file = ../results/G333.46-0.16/c5c8/per_hot_core/line_cubes/alma1_HNCO_10_0_10_-9_0_9__nchans40.fits
+rms = 2.0 mJy/beam
+molecules = CH3CN HNCO
 chan_width = 488 kHz
 
