--- a/configs/extracted/NGC6334I_alma1.cfg
+++ b/configs/extracted/NGC6334I_alma1.cfg
@@ -1,7 +1,6 @@
 [INFO]
 name = NGC6334I
 alma = 1
-# From ellipse in the continuum
 ra = 17h20m53.41869s
 dec = -35d46m57.8969s
 frame = icrs
@@ -26,7 +25,7 @@ chan_width = 488 kHz
 type = spectral_cube
 file = ${subcubes}/spw3_from_CH3CN.structure259.subcube.contsub.fits
 rms = 1.9 mJy/beam
-molecules = CH3CN
+molecules = CH3CN HNCO
 chan_width = 488 kHz
 
 [b6_c5c8_spw3_CH3CN_12_2_-11_2_]
@@ -62,5 +61,26 @@ type = spectral_cube
 file = ../results/NGC6334I/c5c8/per_hot_core/line_cubes/alma1_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.7 mJy/beam
 molecules = CH3OH
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_HNCO_10_3_8_-9_3_7_]
+type = spectral_cube
+file = ../results/NGC6334I/c5c8/per_hot_core/line_cubes/alma1_HNCO_10_3_8_-9_3_7__nchans40.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN HNCO
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_HNCO_10_2_9_-9_2_8_]
+type = spectral_cube
+file = ../results/NGC6334I/c5c8/per_hot_core/line_cubes/alma1_HNCO_10_2_9_-9_2_8__nchans40.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN HNCO
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_HNCO_10_0_10_-9_0_9_]
+type = spectral_cube
+file = ../results/NGC6334I/c5c8/per_hot_core/line_cubes/alma1_HNCO_10_0_10_-9_0_9__nchans40.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN HNCO
 chan_width = 488 kHz
 
