--- a/configs/extracted/NGC6334I_alma4.cfg
+++ b/configs/extracted/NGC6334I_alma4.cfg
@@ -1,11 +1,16 @@
 [INFO]
 name = NGC6334I
-alma = 3
-ra = 17h20m53.18700s
-dec = -35d46m59.3280s
+alma = 4
+# Blob
+#ra = 17h20m53.18700s
+#dec = -35d46m59.3280s
+# Small one
+ra = 17h20m53.16652s
+dec = -35d46m59.1704s
 frame = icrs
 distance = 1.35 kpc
-vlsr = -10.7 km/s
+#vlsr = -10.7 km/s
+vlsr = -6.92 km/s
 radius = 0.13 arcsec
 sourcedata = ../source_data
 subcubes = ../results/${name}/c5c8/per_hot_core/
@@ -25,7 +30,7 @@ chan_width = 488 kHz
 type = spectral_cube
 file = ${subcubes}/spw3_from_CH3CN.structure259.subcube.contsub.fits
 rms = 1.9 mJy/beam
-molecules = CH3CN
+molecules = CH3CN HNCO
 chan_width = 488 kHz
 
 [b6_c5c8_spw0_CH3OH_18_3_15_-17_4_14_A_vt_0]
@@ -33,5 +38,26 @@ type = spectral_cube
 file = ../results/NGC6334I/c5c8/per_hot_core/line_cubes/alma4_CH3OH_18_3_15_-17_4_14_A_vt_0_nchans40.fits
 rms = 1.7 mJy/beam
 molecules = CH3OH
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_HNCO_10_3_8_-9_3_7_]
+type = spectral_cube
+file = ../results/NGC6334I/c5c8/per_hot_core/line_cubes/alma4_HNCO_10_3_8_-9_3_7__nchans40.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN HNCO
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_HNCO_10_2_9_-9_2_8_]
+type = spectral_cube
+file = ../results/NGC6334I/c5c8/per_hot_core/line_cubes/alma4_HNCO_10_2_9_-9_2_8__nchans40.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN HNCO
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_HNCO_10_0_10_-9_0_9_]
+type = spectral_cube
+file = ../results/NGC6334I/c5c8/per_hot_core/line_cubes/alma4_HNCO_10_0_10_-9_0_9__nchans40.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN HNCO
 chan_width = 488 kHz
 
