--- a/configs/extracted/pvmaps/G333.46-0.16_alma1_rotation.cfg
+++ b/configs/extracted/pvmaps/G333.46-0.16_alma1_rotation.cfg
@@ -31,3 +31,33 @@ source_section = b6_c5c8_spw3
 length = 2 arcsec
 width = 0.05 arcsec
 freq_slab = 28 MHz
+
+[HNCO_8]
+molecule = HNCO
+qns = 10(3,8)-9(3,7)
+line_lists = CDMS
+restore_molecule = ${moldir}/hnco.json
+source_section = b6_c5c8_spw3
+length = 2 arcsec
+width = 0.05 arcsec
+freq_slab = 28 MHz
+
+[HNCO_9]
+molecule = HNCO
+qns = 10(2,9)-9(2,8)
+line_lists = CDMS
+restore_molecule = ${moldir}/hnco.json
+source_section = b6_c5c8_spw3
+length = 2 arcsec
+width = 0.05 arcsec
+freq_slab = 28 MHz
+
+[HNCO_10]
+molecule = HNCO
+qns = 10(0,10)-9(0,9)
+line_lists = CDMS
+restore_molecule = ${moldir}/hnco.json
+source_section = b6_c5c8_spw3
+length = 2 arcsec
+width = 0.05 arcsec
+freq_slab = 28 MHz
