--- a/configs/extracted/summary.cfg
+++ b/configs/extracted/summary.cfg
@@ -159,6 +159,18 @@ pvmap = ${results}/${name}_alma1_rotation.CH3CN_K3.ra245.33407_dec-50.16288.PA${
 pvnoise = 1.9 mJy/beam
 #nplot = 13
 
+[G333.46-0.16_alma1_hnco]
+name = G333.46-0.16
+alma = 1
+distance = 2.9 kpc
+vlsr = -43.55 km/s
+paval = 130
+pvmap = ${results}/${name}_alma1_rotation.HNCO_10.ra245.33407_dec-50.16288.PA${paval}.fits
+ylim = -50 -35 km/s
+pvnoise = 1.7 mJy/beam
+pvnsigma = 4
+nplot = 3
+
 [G333.46-0.16_alma7]
 name = G333.46-0.16
 alma = 7
@@ -437,6 +449,28 @@ pvmap = ${results}/${name}_alma5_rotation.CH3CN_K3.ra275.28757_dec-14.52998.PA${
 pvnoise = 1.4 mJy/beam
 pvnsigma = 6
 #nplot = 9
+
+[NGC6334I_alma1]
+name = NGC6334I
+alma = 1
+distance = 1.35 kpc
+vlsr = -8.0 km/s
+paval = 60
+pvmap = ${results}/${name}_alma1_rotation.HNCO_8.ra260.22258_dec-35.78275.PA${paval}.fits
+pvnoise = 1.5 mJy/beam
+pvnsigma = 5
+nplot = 12
+
+[NGC6334I_alma4]
+name = NGC6334I
+alma = 4
+distance = 1.35 kpc
+vlsr = -6.92 km/s
+paval = 20
+pvmap = ${results}/${name}_alma4_rotation.HNCO_8.ra260.22153_dec-35.78310.PA${paval}.fits
+pvnoise = 1.5 mJy/beam
+pvnsigma = 4
+nplot = 12
 
 [NGC6334I_alma8]
 name = NGC6334I
