--- a/configs/extracted/G35.13-0.74_alma6.cfg
+++ b/configs/extracted/G35.13-0.74_alma6.cfg
@@ -24,7 +24,7 @@ chan_width = 976 kHz
 type = spectral_cube
 file = ${subcubes}/spw3_from_CH3CN.structure5.subcube.fits
 rms = 1.9 mJy/beam
-molecules = CH3CN
+molecules = CH3CN CH2(OD)CHO
 chan_width = 488 kHz
 
 [b6_c5c8_spw0_1000_CH3OH_18_3_15_-17_4_14_A_vt_0]
@@ -60,5 +60,12 @@ type = spectral_cube
 file = ../results/G35.13-0.74/c5c8/per_hot_core/line_cubes/alma6_CH3CN_12_8_-11_8__nchans40.fits
 rms = 1.9 mJy/beam
 molecules = CH3CN
+chan_width = 488 kHz
+
+[b6_c5c8_spw3_CH2ODCHO_59_13_46_-59_12_47_]
+type = spectral_cube
+file = ../results/G35.13-0.74/c5c8/per_hot_core/line_cubes/alma6_CH2ODCHO_59_13_46_-59_12_47__nchans40.fits
+rms = 1.9 mJy/beam
+molecules = CH3CN CH2(OD)CHO
 chan_width = 488 kHz
 
