--- a/configs/extracted/pvmaps/NGC6334I_alma4_rotation.cfg
+++ b/configs/extracted/pvmaps/NGC6334I_alma4_rotation.cfg
@@ -1,6 +1,6 @@
 [DEFAULT]
 moldir = ./molecules
-pas = 40 50 60 130 140 150 deg
+pas = 0 10 20 30 40 50 60 90 110 120 130 140 150 deg
 
 [CH3OH_spw0]
 molecule = CH3OH
@@ -27,6 +27,36 @@ molecule = CH3CN
 qns = 12(3)-11(3)
 line_lists = CDMS
 restore_molecule = ${moldir}/ch3cn.json
+source_section = b6_c5c8_spw3
+length = 2 arcsec
+width = 0.05 arcsec
+freq_slab = 28 MHz
+
+[HNCO_8]
+molecule = HNCO
+qns = 10(3,8)-9(3,7)
+line_lists = CDMS
+restore_molecule = ${moldir}/hnco.json
+source_section = b6_c5c8_spw3
+length = 2 arcsec
+width = 0.05 arcsec
+freq_slab = 28 MHz
+
+[HNCO_9]
+molecule = HNCO
+qns = 10(2,9)-9(2,8)
+line_lists = CDMS
+restore_molecule = ${moldir}/hnco.json
+source_section = b6_c5c8_spw3
+length = 2 arcsec
+width = 0.05 arcsec
+freq_slab = 28 MHz
+
+[HNCO_10]
+molecule = HNCO
+qns = 10(0,10)-9(0,9)
+line_lists = CDMS
+restore_molecule = ${moldir}/hnco.json
 source_section = b6_c5c8_spw3
 length = 2 arcsec
 width = 0.05 arcsec
