--- a/configs/extracted/pvmaps/NGC_6334_I_N_alma2_rotation.cfg
+++ b/configs/extracted/pvmaps/NGC_6334_I_N_alma2_rotation.cfg
@@ -2,12 +2,22 @@
 moldir = ./molecules
 pas = -55 10 20 35 100 110 125 215 deg
 
-[CH3OH_spw0]
+#[CH3OH_spw0]
+#molecule = CH3OH
+#qns = 18(3,15)-17(4,14)A,vt=0
+#line_lists = CDMS
+#restore_molecule = ${moldir}/ch3oh.json
+#source_section = b6_c5c8_spw0_1000
+#length = 1 arcsec
+#width = 0.05 arcsec
+#freq_slab = 28 MHz
+
+[CH3OH_spw3]
 molecule = CH3OH
-qns = 18(3,15)-17(4,14)A,vt=0
+qns = 8(-0,8)-7(-1,6)E,vt=0
 line_lists = CDMS
 restore_molecule = ${moldir}/ch3oh.json
-source_section = b6_c5c8_spw0_1000
+source_section = b6_c5c8_spw3
 length = 1 arcsec
 width = 0.05 arcsec
 freq_slab = 28 MHz
