--- a/configs/plots/posters/dihca_moment1.cfg
+++ b/configs/plots/posters/dihca_moment1.cfg
@@ -10,16 +10,16 @@ stretch = linear
 vertical_cbar = false
 horizontal_cbar = true
 left = 1.3
-right = 0.15
+right = 0.2
 top = 0.6
 bottom = 0.5
-hspace = 0.1
+hspace = 0.2
 vspace = -0.2
 cbar_spacing = 0.1
 override_xlabel = true
 override_ylabel = true
-set_xlabel = false
-set_ylabel = false
+set_xlabel = true
+set_ylabel = true
 label_xpad = 0.45
 label_ypad = -0.7
 xticks_fmt = hh:mm:ss.ss
@@ -32,6 +32,7 @@ contour_linewidth = 2.0
 contour_colors = #7f7f7f
 contour_stretch = log
 negative_nsigma = 3
+enumerate = false
 # Units
 ignore_units = false
 labelpad = 5
