--- a/configs/plots/posters/dihca_pvmaps.cfg
+++ b/configs/plots/posters/dihca_pvmaps.cfg
@@ -6,11 +6,12 @@ sharey = false
 styles = maps inferno aspect_auto
 vertical_cbar = false
 horizontal_cbar = true
-left = 0.8
+left = 1.3
 right = 0.2
 top = 0.6
 bottom = 0.5
 hspace = 0.2
+vspace = -0.2
 cbar_spacing = 0.1
 labelpad = 5
 label_xpad = 0.45
@@ -29,7 +30,8 @@ xticks_fmt = {x:.1f}
 yticks_fmt = {x:.0f}
 inverty = true
 ticks_color = w
-label = ${source} ALMA${alma} PA=${paval}${deg}
+#label = ${source} ALMA${alma} PA=${paval}${deg}
+enumerate = false
 vlines = 0 arcsec
 vlines_linestyle = :
 vlines_color = #35ff2c
