Change poster plot spacing

--- a/configs/plots/posters/dihca_pvmaps.cfg
+++ b/configs/plots/posters/dihca_pvmaps.cfg
@@ -15,7 +15,7 @@ vspace = -0.2
 cbar_spacing = 0.1
 labelpad = 5
 label_xpad = 0.45
-label_ypad = -0.7
+#label_ypad = -0.7
 xunit = arcsec
 yunit = km/s
 xname = Offset
