Change plot type

--- a/configs/plots/papers/group_pv_maps.1.cfg
+++ b/configs/plots/papers/group_pv_maps.1.cfg
@@ -113,6 +113,23 @@ hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 32 mJy/beam
 
+[G10.62-0.38_alma1a_infall]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 15.839053466606627 solMass
+model_amplitude = 11.853803492250195
+model_x_0 = 0.010101010101010102
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 3.085026468706788 solMass
+model_vsys = -2.295489254670895
+model_offset0 = 0.08200997056659148
+
 [G10_alma1b_pvmap_rot]
 loc = 1 0
 source = G10.62-0.38
