Add infall section

--- a/configs/plots/papers/group_pv_maps.1.cfg
+++ b/configs/plots/papers/group_pv_maps.1.cfg
@@ -122,8 +122,8 @@ sampling = 500
 linestyle = --
 color = #eb5252
 model_mass = 15.839053466606627 solMass
-model_amplitude = 11.853803492250195
-model_x_0 = 0.010101010101010102
+model_amplitude = -11.853803492250195
+model_x_0 = 0.040404040404040408
 model_alpha = 0.5
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 model_sd_mass = 3.085026468706788 solMass
@@ -224,6 +224,23 @@ hlines = 0.851 km/s
 rms = 1.6 mJy/beam
 vmax = 16 mJy/beam
 
+[G10.62-0.38_alma1c_infall]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 4.960438860257873 solMass
+model_amplitude = -6.633659282336722
+model_x_0 = 0.040404040404040408
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.7494661142470503 solMass
+model_vsys = -2.1787701537532964
+model_offset0 = 0.04048023986295073
+
 [G11.1_pvmap_rot]
 loc = 3 0
 source = G11.1-0.12
@@ -300,3 +317,19 @@ hlines = 31.85 km/s
 rms = 1.3 mJy/beam
 vmax = 15 mJy/beam
 
+[G11.1-0.12_alma1_keplerian_fit]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 6.930846521069932 solMass
+model_amplitude = -7.84126717657039
+model_x_0 = 0.06666666666666666
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.4501545688387307 solMass
+model_vsys = 27.531078190332376
+model_offset0 = 0.06645727389447786
