--- a/configs/plots/papers/group_pv_maps.2.cfg
+++ b/configs/plots/papers/group_pv_maps.2.cfg
@@ -113,6 +113,23 @@ hlines = 35.1 km/s
 rms = 1.1 mJy/beam
 vmax = 45 mJy/beam
 
+[G11.92-0.61_alma1a_infall]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 44.46751328093813 solMass
+model_amplitude = -19.86161378765654
+model_x_0 = 0.059347181
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 3.0050221537082416 solMass
+model_vsys = 35.0718928208667
+model_offset0 = 0.009770749516444886
+
 [G11.92_alma1b_pvmap_rot]
 loc = 1 0
 source = G11.92-0.61
@@ -217,6 +234,23 @@ hlines = 37 km/s
 rms = 1.1 mJy/beam
 vmax = 20 mJy/beam
 
+[G11.92-0.61_alma3_infall]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.001263295019477 solMass
+model_amplitude = -9.87903195940451
+model_x_0 = 0.059347181
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.5696947578482806 solMass
+model_vsys = 35.98235303900969
+model_offset0 = -0.006730312863536275
+
 [G29_pvmap_rot]
 loc = 3 0
 source = G29.96-0.02
@@ -289,3 +323,19 @@ hlines = 97.25 km/s
 rms = 1.4 mJy/beam
 vmax = 45 mJy/beam
 
+[G29.96-0.02_alma1_infall]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 44.71755778216386 solMass
+model_amplitude = -19.917377254580362
+model_x_0 = 0.038022813
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 3.8898571943793154 solMass
+model_vsys = 97.75379862771113
+model_offset0 = 0.015477065210999274
