--- a/configs/plots/papers/group_pv_maps.1.cfg
+++ b/configs/plots/papers/group_pv_maps.1.cfg
@@ -317,7 +317,7 @@ hlines = 31.85 km/s
 rms = 1.3 mJy/beam
 vmax = 15 mJy/beam
 
-[G11.1-0.12_alma1_keplerian_fit]
+[G11.1-0.12_alma1_infall]
 loc = 3 1
 function = piecewise_powerlaw
 xrange = -0.4900000000000392 0.4900000000000392 arcsec
@@ -333,3 +333,4 @@ coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${mod
 model_sd_mass = 1.4501545688387307 solMass
 model_vsys = 27.531078190332376
 model_offset0 = 0.06645727389447786
+
