--- a/configs/plots/papers/group_pv_maps.11.cfg
+++ b/configs/plots/papers/group_pv_maps.11.cfg
@@ -110,11 +110,6 @@ xlim = -0.55 0.55 arcsec
 hlines = 47.0 km/s
 rms = 1.2 mJy/beam
 vmax = 30 mJy/beam
-#markers = -0.14 arcsec 46.2 km/s
-#markers_physframe = data
-#markers_marker = ^
-#markers_mec = #46eff2
-#markers_ms = 10
 
 [IRAS_181622048_alma1_pvmap_out]
 loc = 2 1
@@ -206,6 +201,22 @@ model_sd_x_0 = 0.0
 model_sd_alpha = 0.09069767258886366
 model_sd_vsys = 0.4422981025697157
 model_sd_offset0 = 0.03975000575012083
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[IRAS_181622048_alma1_infall]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.908809183989916 solMass
+model_amplitude = -10.278441756673729
+model_x_0 = 0.15384615384615385
+model_alpha = 0.5
+model_vsys = 44.30391095786052
+model_offset0 = 0.01938786815015558
 model_info = 1
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 
