--- a/configs/plots/papers/group_pv_maps.13.cfg
+++ b/configs/plots/papers/group_pv_maps.13.cfg
@@ -162,3 +162,20 @@ model_sd_vsys = 0.24914878882138244
 model_sd_offset0 = 0.009008858464710811
 model_info = 1
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[G333.12-0.56_alma1_infall]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 20.42532027607212 solMass
+model_amplitude = -13.461006952396081
+model_x_0 = 0.06060606060606061
+model_alpha = 0.5
+model_vsys = -59.77943301820932
+model_offset0 = 0.024112024178627574
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
