--- a/configs/plots/papers/group_pv_maps.3.cfg
+++ b/configs/plots/papers/group_pv_maps.3.cfg
@@ -115,6 +115,23 @@ hlines = -58.47 km/s
 rms = 1.8 mJy/beam
 vmax = 27 mJy/beam
 
+[G333.12-0.56_alma1_infall]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 15.20371956574227 solMass
+model_amplitude = 11.61363135058741
+model_x_0 = 0.060606060606060608
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 0.553784099116798 solMass
+model_vsys = -58.0738789560714
+model_offset0 = -0.036415671228012564
+
 [G333.12_alma2_pvmap_rot]
 loc = 1 0
 source = G333.12-0.56
@@ -217,29 +234,28 @@ hlines = -87.04 km/s
 rms = 1.1 mJy/beam
 vmax = 22 mJy/beam
 
+[G333.23-0.06_alma3_infall]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.40865048432779 solMass
+model_amplitude = -10.06028417786803
+model_x_0 = 0.038461538
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_sd_mass = 1.01310012340932 solMass
+model_vsys = -87.49187541341088
+model_offset0 = 0.02790983464792463
+
 [G333.46_alma1_pvmap_rot]
 loc = 3 0
 source = G333.46-0.16
 alma = 1
 paval = 130
-pvmap = ${results}/${source}_alma1_rotation.HNCO_10.ra245.33407_dec-50.16288.PA${paval}.fits
-xlim = -0.45 0.45 arcsec
-ylim = -60 -30 km/s
-hlines = -43.55 km/s
-rms = 1.7 mJy/beam
-vmax = 45 mJy/beam
-#markers = 0.33 arcsec -39.7 km/s, -0.19 arcsec -48.5 km/s
-#markers_physframe = data
-#markers_marker = v, ^
-#markers_mec = #46eff2
-#markers_mfc = #46eff2
-#markers_ms = 10
-
-[G333.46_alma1_pvmap_out]
-loc = 3 1
-source = G333.46-0.16
-alma = 1
-paval = 220
 pvmap = ${results}/${source}_alma1_rotation.HNCO_10.ra245.33407_dec-50.16288.PA${paval}.fits
 xlim = -0.45 0.45 arcsec
 ylim = -60 -30 km/s
@@ -297,5 +313,34 @@ model_sd_alpha = 0.10959043390924572
 model_sd_vsys = 0.24914878882138244
 model_sd_offset0 = 0.009008858464710811
 model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[G333.46_alma1_pvmap_out]
+loc = 3 1
+source = G333.46-0.16
+alma = 1
+paval = 220
+pvmap = ${results}/${source}_alma1_rotation.HNCO_10.ra245.33407_dec-50.16288.PA${paval}.fits
+xlim = -0.45 0.45 arcsec
+ylim = -60 -30 km/s
+hlines = -43.55 km/s
+rms = 1.7 mJy/beam
+vmax = 45 mJy/beam
+
+[G333.46-0.16_alma1_infall]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+yunit = km/s
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 5.40945722258099 solMass
+model_sd_mass = 0.5605674008863251 solMass
+model_amplitude = -6.927395072896697
+model_x_0 = 0.068965517
+model_alpha = 0.5
+model_vsys = -43.61687521522653
+model_offset0 = 0.03230520378155113
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 
