Add mirror infall

--- a/configs/plots/papers/group_pv_maps.1.cfg
+++ b/configs/plots/papers/group_pv_maps.1.cfg
@@ -334,3 +334,51 @@ model_sd_mass = 1.4501545688387307 solMass
 model_vsys = 27.531078190332376
 model_offset0 = 0.06645727389447786
 
+[G10.62-0.38_alma1a_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 15.839053466606627 solMass
+model_amplitude = 11.853803492250195
+model_x_0 = 0.04040404040404041
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -2.295489254670895
+model_offset0 = 0.08200997056659148
+model_info = 1
+
+[G10.62-0.38_alma1c_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 4.960438860257873 solMass
+model_amplitude = 6.633659282336722
+model_x_0 = 0.04040404040404041
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -2.1787701537532964
+model_offset0 = 0.04048023986295073
+model_info = 1
+
+[G11.1-0.12_alma1_infall_mirror]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 6.930846521069932 solMass
+model_amplitude = 7.84126717657039
+model_x_0 = 0.06666666666666667
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 27.531078190332376
+model_offset0 = 0.06645727389447786
+model_info = 1
+
