--- a/configs/plots/papers/group_pv_maps.11.cfg
+++ b/configs/plots/papers/group_pv_maps.11.cfg
@@ -220,3 +220,19 @@ model_offset0 = 0.01938786815015558
 model_info = 1
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 
+[IRAS_181622048_alma1_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.908809183989916 solMass
+model_amplitude = 10.278441756673729
+model_x_0 = 0.15384615384615385
+model_alpha = 0.5
+model_vsys = 44.30391095786052
+model_offset0 = 0.01938786815015558
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
