--- a/configs/plots/papers/group_pv_maps.12.cfg
+++ b/configs/plots/papers/group_pv_maps.12.cfg
@@ -336,3 +336,51 @@ model_offset0 = 0.012543710016940258
 model_info = 1
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 
+[G5.89-0.37_alma14_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 8.317855848978745 solMass
+model_amplitude = 8.590111594474294
+model_x_0 = 0.06688963210702341
+model_alpha = 0.5
+model_vsys = 8.160722645931346
+model_offset0 = 0.021991679351316226
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC6334I_alma1_infall_mirror]
+loc = 1 1
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 8.67984271557738 solMass
+model_amplitude = 8.775038665180102
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+model_vsys = -6.47272783024237
+model_offset0 = -0.003809389795954373
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC6334I_alma4_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 7.321287015550672 solMass
+model_amplitude = 8.059105246022634
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+model_vsys = -8.131157691426676
+model_offset0 = 0.012543710016940258
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
