--- a/configs/plots/papers/group_pv_maps.3.cfg
+++ b/configs/plots/papers/group_pv_maps.3.cfg
@@ -344,3 +344,51 @@ model_vsys = -43.61687521522653
 model_offset0 = 0.03230520378155113
 coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
 
+[G333.12-0.56_alma1_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 15.20371956574227 solMass
+model_amplitude = 11.61363135058741
+model_x_0 = 0.06060606060606061
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -58.0738789560714
+model_offset0 = -0.036415671228012564
+model_info = 1
+
+[G333.23-0.06_alma3_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.40865048432779 solMass
+model_amplitude = 10.06028417786803
+model_x_0 = 0.038461538461538464
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -87.49187541341088
+model_offset0 = 0.02790983464792463
+model_info = 1
+
+[G333.46-0.16_alma1_infall_mirror]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 5.40945722258099 solMass
+model_amplitude = 6.927395072896697
+model_x_0 = 0.06896551724137931
+model_alpha = 0.5
+model_vsys = -43.61687521522653
+model_offset0 = 0.03230520378155113
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
