--- a/configs/plots/papers/group_pv_maps.5.cfg
+++ b/configs/plots/papers/group_pv_maps.5.cfg
@@ -332,3 +332,51 @@ model_vsys = 58.7369732510932
 model_offset0 = -0.020445275852170534
 model_info = 1
 
+[G335.78+0.17_alma2_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 9.820392300695831 solMass
+model_amplitude = 9.333779340994685
+model_x_0 = 0.0625
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -51.57888912018678
+model_offset0 = 0.011090403516737058
+model_info = 1
+
+[G336.01-0.82_alma1_infall_mirror]
+loc = 1 1
+function = piecewise_powerlaw
+xrange = -0.48950000000007116 0.48950000000007116 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 14.299712876295894 solMass
+model_amplitude = 11.263069647401139
+model_x_0 = 0.06451612903225806
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -45.4206077372057
+model_offset0 = 0.004437441478521859
+model_info = 1
+
+[G34.43+0.24_alma1_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 21.63876177657711 solMass
+model_amplitude = 13.855088808011894
+model_x_0 = 0.066006600660066
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 58.7369732510932
+model_offset0 = -0.020445275852170534
+model_info = 1
+
