--- a/configs/plots/papers/group_pv_maps.6.cfg
+++ b/configs/plots/papers/group_pv_maps.6.cfg
@@ -337,3 +337,51 @@ model_vsys = 33.97228228788121
 model_offset0 = -0.013997387134479572
 model_info = 1
 
+[G35.03+0.35_A_alma1_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 20.071282619834534 solMass
+model_amplitude = 13.343835335574317
+model_x_0 = 0.08620689655172414
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 50.828525972344394
+model_offset0 = -0.020672155792278463
+model_info = 1
+
+[G35.13-0.74_alma1_infall_mirror]
+loc = 1 1
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 6.75143302495276 solMass
+model_amplitude = 7.739111306374149
+model_x_0 = 0.09090909090909091
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 35.78217340068655
+model_offset0 = -0.03836856486217351
+model_info = 1
+
+[G35.13-0.74_alma2_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.48749999999998506 0.48749999999998506 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 2.7193722611889983 solMass
+model_amplitude = 4.911650348614933
+model_x_0 = 0.09090909090909091
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 33.97228228788121
+model_offset0 = -0.013997387134479572
+model_info = 1
+
