--- a/configs/plots/papers/group_pv_maps.7.cfg
+++ b/configs/plots/papers/group_pv_maps.7.cfg
@@ -203,3 +203,19 @@ model_vsys = 31.789021824430836
 model_offset0 = -0.03433463506282461
 model_info = 1
 
+[G35.20-0.74_N_alma1_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 3.87439880274262 solMass
+model_amplitude = 5.86266760723382
+model_x_0 = 0.091324200913242
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 31.789021824430836
+model_offset0 = -0.03433463506282461
+model_info = 1
+
