--- a/configs/plots/papers/group_pv_maps.9.cfg
+++ b/configs/plots/papers/group_pv_maps.9.cfg
@@ -282,3 +282,35 @@ model_vsys = -3.5721185677940523
 model_offset0 = 0.11505712307143032
 model_info = 1
 
+[IRAS_18182-1433_alma3_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 17.27677520629488 solMass
+model_amplitude = 12.380108539151216
+model_x_0 = 0.055865921787709494
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 60.16600044882333
+model_offset0 = -0.05398330020586529
+model_info = 1
+
+[NGC_6334_I_N_alma1_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.9945 0.9945 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 13.337614785650759 solMass
+model_amplitude = 10.877577745457856
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -3.5721185677940523
+model_offset0 = 0.11505712307143032
+model_info = 1
+
