--- a/configs/plots/papers/group_pv_maps.10.cfg
+++ b/configs/plots/papers/group_pv_maps.10.cfg
@@ -339,3 +339,51 @@ model_vsys = 37.28539294186246
 model_offset0 = 0.01622876626201136
 model_info = 1
 
+[NGC_6334_I_N_alma4_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 5.008559892995641 solMass
+model_amplitude = 6.665758063838215
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+model_vsys = -5.1109728228308375
+model_offset0 = 0.0026538640954391506
+model_info = 1
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+
+[NGC_6334_I_N_alma6_infall_mirror]
+loc = 1 1
+function = piecewise_powerlaw
+xrange = -0.49500000000000005 0.49500000000000005 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 9.996699492902263 solMass
+model_amplitude = 9.417192098531983
+model_x_0 = 0.14814814814814814
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -3.714491730229512
+model_offset0 = -0.033134059487579144
+model_info = 1
+
+[W33A_alma1a_infall_mirror]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 17.755709293503035 solMass
+model_amplitude = 12.550531669822306
+model_x_0 = 0.07905138339920949
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 37.28539294186246
+model_offset0 = 0.01622876626201136
+model_info = 1
+
