--- a/configs/plots/papers/group_pv_maps.2.cfg
+++ b/configs/plots/papers/group_pv_maps.2.cfg
@@ -340,3 +340,51 @@ model_sd_mass = 3.8898571943793154 solMass
 model_vsys = 97.75379862771113
 model_offset0 = 0.015477065210999274
 
+[G11.92-0.61_alma1a_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 44.46751328093813 solMass
+model_amplitude = 19.86161378765654
+model_x_0 = 0.05934718100890208
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 35.0718928208667
+model_offset0 = 0.009770749516444886
+model_info = 1
+
+[G11.92-0.61_alma3_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.001263295019477 solMass
+model_amplitude = 9.87903195940451
+model_x_0 = 0.05934718100890208
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 35.98235303900969
+model_offset0 = -0.006730312863536275
+model_info = 1
+
+[G29.96-0.02_alma1_infall_mirror]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.9879999999999696 0.9879999999999696 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 44.71755778216386 solMass
+model_amplitude = 19.917377254580362
+model_x_0 = 0.03802281368821293
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 97.75379862771113
+model_offset0 = 0.015477065210999274
+model_info = 1
+
