--- a/configs/plots/papers/group_pv_maps.4.cfg
+++ b/configs/plots/papers/group_pv_maps.4.cfg
@@ -396,3 +396,67 @@ model_vsys = -50.0253962164979
 model_offset0 = 0.01513677769483081
 model_info = 1
 
+[G333.46-0.16_alma7_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 11.573625272663154 solMass
+model_amplitude = 10.132761472616957
+model_x_0 = 0.06896551724137931
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -41.82786192628541
+model_offset0 = -0.017873012828318404
+model_info = 1
+
+[G335.579-0.272_alma1_infall_mirror]
+loc = 1 1
+function = piecewise_powerlaw
+xrange = -0.9900000000000792 0.9900000000000792 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 7.585244955167229 solMass
+model_amplitude = 8.20309830533521
+model_x_0 = 0.06153846153846154
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -46.489225046855466
+model_offset0 = -0.02275026754045532
+model_info = 1
+
+[G335.579-0.272_alma3_infall_mirror]
+loc = 2 1
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 31.105563629100157 solMass
+model_amplitude = 16.611626147433906
+model_x_0 = 0.06153846153846154
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -48.795327239958205
+model_offset0 = 0.045060647963865365
+model_info = 1
+
+[G335.78+0.17_alma1_infall_mirror]
+loc = 3 1
+function = piecewise_powerlaw
+xrange = -0.4900000000000392 0.4900000000000392 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 16.774137265204512 solMass
+model_amplitude = 12.198690347479223
+model_x_0 = 0.0625
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = -50.0253962164979
+model_offset0 = 0.01513677769483081
+model_info = 1
+
