--- a/configs/plots/papers/group_pv_maps.8.cfg
+++ b/configs/plots/papers/group_pv_maps.8.cfg
@@ -283,3 +283,35 @@ model_vsys = 33.2131891121867
 model_offset0 = 0.0008601822180362316
 model_info = 1
 
+[IRAS_180891732_alma1_infall_mirror]
+loc = 0 1
+function = piecewise_powerlaw
+xrange = -0.9950000000000795 0.9950000000000795 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 27.57751948015581 solMass
+model_amplitude = 15.641223112117661
+model_x_0 = 0.08547008547008547
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 33.506361623774524
+model_offset0 = -0.010368721978890032
+model_info = 1
+
+[IRAS_180891732_alma3_infall_mirror]
+loc = 1 1
+function = piecewise_powerlaw
+xrange = -0.4950000000000396 0.4950000000000396 arcsec
+sampling = 500
+linestyle = --
+color = #eb5252
+model_mass = 7.455751756722471 solMass
+model_amplitude = 8.132776374474883
+model_x_0 = 0.08547008547008547
+model_alpha = 0.5
+coeficients = ${model_amplitude} ${model_x_0} ${model_alpha} ${model_vsys} ${model_offset0}
+model_vsys = 33.2131891121867
+model_offset0 = 0.0008601822180362316
+model_info = 1
+
