Process pv for sources with CH3CN K=8

--- a/configs/extracted/pvmaps/G333.46-0.16_alma1_rotation.cfg
+++ b/configs/extracted/pvmaps/G333.46-0.16_alma1_rotation.cfg
@@ -2,19 +2,39 @@
 moldir = ./molecules
 pas = 130 150 220 240 deg
 
-[CH3OH_spw0]
-molecule = CH3OH
-qns = 18(3,15)-17(4,14)A,vt=0
-line_lists = CDMS
-restore_molecule = ${moldir}/ch3oh.json
-source_section = b6_c5c8_spw0_1000
-length = 2 arcsec
-width = 0.05 arcsec
-freq_slab = 28 MHz
+#[CH3OH_spw0]
+#molecule = CH3OH
+#qns = 18(3,15)-17(4,14)A,vt=0
+#line_lists = CDMS
+#restore_molecule = ${moldir}/ch3oh.json
+#source_section = b6_c5c8_spw0_1000
+#length = 2 arcsec
+#width = 0.05 arcsec
+#freq_slab = 28 MHz
+#
+#[CH3CN_K2]
+#molecule = CH3CN
+#qns = 12(2)-11(2)
+#line_lists = CDMS
+#restore_molecule = ${moldir}/ch3cn.json
+#source_section = b6_c5c8_spw3
+#length = 2 arcsec
+#width = 0.05 arcsec
+#freq_slab = 28 MHz
+#
+#[CH3CN_K3]
+#molecule = CH3CN
+#qns = 12(3)-11(3)
+#line_lists = CDMS
+#restore_molecule = ${moldir}/ch3cn.json
+#source_section = b6_c5c8_spw3
+#length = 2 arcsec
+#width = 0.05 arcsec
+#freq_slab = 28 MHz
 
-[CH3CN_K2]
+[CH3CN_K8]
 molecule = CH3CN
-qns = 12(2)-11(2)
+qns = 12(8)-11(8)
 line_lists = CDMS
 restore_molecule = ${moldir}/ch3cn.json
 source_section = b6_c5c8_spw3
@@ -22,42 +42,32 @@ length = 2 arcsec
 width = 0.05 arcsec
 freq_slab = 28 MHz
 
-[CH3CN_K3]
-molecule = CH3CN
-qns = 12(3)-11(3)
-line_lists = CDMS
-restore_molecule = ${moldir}/ch3cn.json
-source_section = b6_c5c8_spw3
-length = 2 arcsec
-width = 0.05 arcsec
-freq_slab = 28 MHz
-
-[HNCO_8]
-molecule = HNCO
-qns = 10(3,8)-9(3,7)
-line_lists = CDMS
-restore_molecule = ${moldir}/hnco.json
-source_section = b6_c5c8_spw3
-length = 2 arcsec
-width = 0.05 arcsec
-freq_slab = 28 MHz
-
-[HNCO_9]
-molecule = HNCO
-qns = 10(2,9)-9(2,8)
-line_lists = CDMS
-restore_molecule = ${moldir}/hnco.json
-source_section = b6_c5c8_spw3
-length = 2 arcsec
-width = 0.05 arcsec
-freq_slab = 28 MHz
-
-[HNCO_10]
-molecule = HNCO
-qns = 10(0,10)-9(0,9)
-line_lists = CDMS
-restore_molecule = ${moldir}/hnco.json
-source_section = b6_c5c8_spw3
-length = 2 arcsec
-width = 0.05 arcsec
-freq_slab = 28 MHz
+#[HNCO_8]
+#molecule = HNCO
+#qns = 10(3,8)-9(3,7)
+#line_lists = CDMS
+#restore_molecule = ${moldir}/hnco.json
+#source_section = b6_c5c8_spw3
+#length = 2 arcsec
+#width = 0.05 arcsec
+#freq_slab = 28 MHz
+#
+#[HNCO_9]
+#molecule = HNCO
+#qns = 10(2,9)-9(2,8)
+#line_lists = CDMS
+#restore_molecule = ${moldir}/hnco.json
+#source_section = b6_c5c8_spw3
+#length = 2 arcsec
+#width = 0.05 arcsec
+#freq_slab = 28 MHz
+#
+#[HNCO_10]
+#molecule = HNCO
+#qns = 10(0,10)-9(0,9)
+#line_lists = CDMS
+#restore_molecule = ${moldir}/hnco.json
+#source_section = b6_c5c8_spw3
+#length = 2 arcsec
+#width = 0.05 arcsec
+#freq_slab = 28 MHz
