--- a/configs/extracted/pvmaps/IRAS_180891732_alma1_rotation.cfg
+++ b/configs/extracted/pvmaps/IRAS_180891732_alma1_rotation.cfg
@@ -2,29 +2,39 @@
 moldir = ./molecules
 pas = 245 335 deg
 
-[CH3OH_spw0]
-molecule = CH3OH
-qns = 18(3,15)-17(4,14)A,vt=0
-line_lists = CDMS
-restore_molecule = ${moldir}/ch3oh.json
-source_section = b6_c5c8_spw0_1000
-length = 2 arcsec
-width = 0.05 arcsec
-freq_slab = 28 MHz
+#[CH3OH_spw0]
+#molecule = CH3OH
+#qns = 18(3,15)-17(4,14)A,vt=0
+#line_lists = CDMS
+#restore_molecule = ${moldir}/ch3oh.json
+#source_section = b6_c5c8_spw0_1000
+#length = 2 arcsec
+#width = 0.05 arcsec
+#freq_slab = 28 MHz
+#
+#[CH3CN_K2]
+#molecule = CH3CN
+#qns = 12(2)-11(2)
+#line_lists = CDMS
+#restore_molecule = ${moldir}/ch3cn.json
+#source_section = b6_c5c8_spw3
+#length = 2 arcsec
+#width = 0.05 arcsec
+#freq_slab = 28 MHz
+#
+#[CH3CN_K3]
+#molecule = CH3CN
+#qns = 12(3)-11(3)
+#line_lists = CDMS
+#restore_molecule = ${moldir}/ch3cn.json
+#source_section = b6_c5c8_spw3
+#length = 2 arcsec
+#width = 0.05 arcsec
+#freq_slab = 28 MHz
 
-[CH3CN_K2]
+[CH3CN_K8]
 molecule = CH3CN
-qns = 12(2)-11(2)
-line_lists = CDMS
-restore_molecule = ${moldir}/ch3cn.json
-source_section = b6_c5c8_spw3
-length = 2 arcsec
-width = 0.05 arcsec
-freq_slab = 28 MHz
-
-[CH3CN_K3]
-molecule = CH3CN
-qns = 12(3)-11(3)
+qns = 12(8)-11(8)
 line_lists = CDMS
 restore_molecule = ${moldir}/ch3cn.json
 source_section = b6_c5c8_spw3
