Test outflow arrows

--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -44,8 +44,8 @@ beam_zorder = 4
 beam_color = #3bb802
 #Artists
 markers = ${center}
-markers_marker = ^
-markers_mec = #3bb802
+markers_marker = x
+markers_mec = k
 markers_fillstyle = none
 markers_ms = 10
 markers_mew = 4.0
@@ -157,7 +157,9 @@ center = 18h13m58.11097s -18d54m20.2010s icrs
 # Artists
 scale = 18h13m58.08s -18d54m20.6s icrs
 scale_distance = 3.37 kpc
-arrows_pa = 129 deg
+arrows = ${center}, ${center}
+arrows_color = #f93dff, #03ecfc
+arrows_pa = 129 deg, 53 deg
 
 [G11.92_alma1b_moment1]
 loc = 1 2
