Test outflow arrows

--- a/configs/plots/papers/group_moments.1.cfg
+++ b/configs/plots/papers/group_moments.1.cfg
@@ -158,7 +158,9 @@ center = 18h13m58.11097s -18d54m20.2010s icrs
 scale = 18h13m58.08s -18d54m20.6s icrs
 scale_distance = 3.37 kpc
 arrows = ${center}, ${center}
-arrows_color = #f93dff, #03ecfc
+arrows_color = #f93dff, #02b829
+arrows_ls = -, --
+arrows_style = ->, -
 arrows_pa = 129 deg, 53 deg
 
 [G11.92_alma1b_moment1]
